icon index.html

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="text-box">
-                        <i class="fas fa-mobile"></i>
+                        <i class="fas fa-mobile" id="i1"></i>
                         <h4>SOCIAL MEDIA DESIGN</h4>
                         <p>In today's digital age, a strong online presence is essential. Our Social Media Design service is your key to making a lasting impression on your audience. We understand that compelling visuals are the heart of effective social media marketing.</p>
                     </div> <!-- end of text-box -->
