--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
                     <div class="text-box">
-                        <i class="fas fa-gem"></i>
+                        <i class="fas fa-gem" id="i2"></i>
                         <h4>LOGO DESIGN</h4>
                         <p>Your logo is the face of your brand, the visual representation of your identity. It's not just a design; it's a powerful statement. Our Logo Design service is dedicated to creating unique and memorable logos that set you apart from the competition.</p>
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
-                    <div class="text-box">
+                    <div class="text-box" id="i3">
                         <i class="fas fa-copyright"></i>
                         <h4>BRANDING</h4>
                         <p>Your brand is more than just a logo; it's the essence of your business or project. Our Branding service is dedicated to helping you establish a unique and memorable visual identity that resonates with your audience.</p>
