fix error index.html

--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
-                    <div class="text-box" id="i3">
-                        <i class="fas fa-copyright"></i>
+                    <div class="text-box">
+                        <i class="fas fa-copyright" id="i3"></i>
                         <h4>BRANDING</h4>
                         <p>Your brand is more than just a logo; it's the essence of your business or project. Our Branding service is dedicated to helping you establish a unique and memorable visual identity that resonates with your audience.</p>
                     </div> <!-- end of text-box -->
