--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="text-container">
-                        <h1 class="h1-large text-left">Hi! I'm Soufyane,<br>Welcome to my World!</h1>
+                    <div class="text-container header-box">
+                        <h1 class="h1-large text-left"><span class="word"></span><br>Welcome to my World!</h1>
 							<a class="btn-solid-lg page-scroll" href="#about">Discover</a>
 							<a class="btn-outline-lg page-scroll" href="#contact">
 							<i class="fas fa-user"></i>Contact Me</a>
