Update About me
Update information in about me section and make it alined with each others and

--- a/index.html
+++ b/index.html
@@ -119,30 +119,30 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="text-container first">
-                        <h2>Hi there I'm Soufyane,</h2>
-                        <p>a 19-year-old Graphic Designer with a zest for creative design and limitless energy. My passion lies in creating captivating designs, especially for Social media.</p>
+                        <h2>Hi I'm Soufyane,</h2>
+                        <p>Hey, I'm Soufyane Mokrim, a 19-year-old Moroccan graphic designer passionate about turning concepts into captivating visuals. With a clean, minimalist style and a knack for user-centric design, I bring ideas to life using Adobe Creative Suite. I prioritize understanding clients' needs, creating designs that are both visually striking and purposeful. I love staying on top of design trends while infusing my own creative touch.</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
                     <div class="text-container second">
+                        <div class="time">2024 - PRESENT</div>
+                        <h6>QIR Agency - Co-Fonder & CEO & CDO</h6>
+                        <p>My role involves shaping our brand's identity and telling our story in engaging ways, and making sure our creative work is top-notch.</p>
                         <div class="time">2023 - PRESENT</div>
-                        <h6>Freelance - Graphic Designer</h6>
-                        <p>Designed eye-catching social media content for multiple clients.</p>
-                        <div class="time">2022 - 2024</div>
-                        <h6>CMC NADOR, City of Professions and Competences</h6>
-                        <p>I am currently pursuing my studies in Graphic Design at CMC (City of Professions and Competences). This educational journey equips me  with the knowledge and skills necessary to excel in the dynamic field of graphic design.</p>
+                        <h6>Freelance- Graphic Designer</h6>
+                        <p>Designed eye-catching social media content for multiple clients. Created commercial logos that reflect brand identities.</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
-				<!-- if i need to put more expericence
+				<!-- if i need to put more expericence -->
                     <div class="text-container third">
-                        <div class="time">2022 - 2024</div>
-                        <h6>Senior Web Designer</h6>
-                        <p>Inhouse web designer for ecommerce firm</p>
-                        <div class="time">2016 - 2017</div>
-                        <h6>Junior Web Designer</h6>
-                        <p>Junior web designer for small web agency</p>
-                    </div>  end of text-container -->
+                        <div class="time">2023 - PRESENT</div>
+                        <h6>CMC NADOR, City of Professions and Competences</h6>
+                        <p>I am currently pursuing my studies in Graphic Design at CMC (City of Professions and Competences).</p>
+                        <div class="time">AUG 2023 - OCT 2023</div>
+                        <h6>SG2i Consulting, Casablanca - Graphic Designer</h6>
+                        <p>Created engaging social media designs. Gained valuable experience in visual communication.</p>
+                    </div>
 					
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
