--- a/index.html
+++ b/index.html
@@ -161,22 +161,22 @@
             </div> <!-- end of row -->
             <div class="row">
                 <div class="col-lg-4">
-                    <div class="text-box">
-                        <i class="fas fa-mobile" id="i1"></i>
+                    <div class="text-box text-center cardx">
+                        <i class="fas fa-mobile"></i>
                         <h4>SOCIAL MEDIA DESIGN</h4>
                         <p>In today's digital age, a strong online presence is essential. Our Social Media Design service is your key to making a lasting impression on your audience. We understand that compelling visuals are the heart of effective social media marketing.</p>
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
-                    <div class="text-box">
-                        <i class="fas fa-gem" id="i2"></i>
+                    <div class="text-box text-center cardx">
+                        <i class="fas fa-gem"></i>
                         <h4>LOGO DESIGN</h4>
                         <p>Your logo is the face of your brand, the visual representation of your identity. It's not just a design; it's a powerful statement. Our Logo Design service is dedicated to creating unique and memorable logos that set you apart from the competition.</p>
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
-                    <div class="text-box">
-                        <i class="fas fa-copyright" id="i3"></i>
+                    <div class="text-box text-center cardx">
+                        <i class="fas fa-copyright"></i>
                         <h4>BRANDING</h4>
                         <p>Your brand is more than just a logo; it's the essence of your business or project. Our Branding service is dedicated to helping you establish a unique and memorable visual identity that resonates with your audience.</p>
                     </div> <!-- end of text-box -->
