add details animation

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 	
 	    <!-- Details -->
 	<div class="split">
-		<div class="area-1">
+		<div class="area-1 cardx">
 		</div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2 bg-gray">
             <div class="container">    
                 <div class="row">
