--- a/index.html
+++ b/index.html
@@ -305,6 +305,32 @@
                     <p class="p-heading">For any type of online project please don't hesitate to get in touch with me. The fastest way is to send me your message using the following email <a class="blue no-line" href="mailto:soufyanmoukerim90@gmail.com">contact@soufyanenmokrim.com</a></p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
+            <div class="row">
+                <div class="col-lg-12">
+                    
+                    <!-- Contact Form -->
+                    <form id="contactForm" name="Contact" method="POST" netlify data-netlify="true" data-netlify-honeypot="bot-field">
+					<input type="hidden" name="form-name" value="Contact" />
+                        <div class="form-group">
+                            <input type="text" name="name" class="form-control-input" id="cname" required>
+                            <label class="label-control" for="cname">Name</label>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" name="email" class="form-control-input" id="cemail" required>
+                            <label class="label-control" for="cemail">Email</label>
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control-textarea" name="message" id="cmessage" required></textarea>
+                            <label class="label-control" for="cmessage">Project details</label>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="form-control-submit-button">Submit</button>
+                        </div>
+                    </form>
+                    <!-- end of contact form -->
+
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of form-1 -->  
     <!-- end of contact -->
