fix the thanks page probl

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 <div class="col-lg-12">
                     
                     <!-- Contact Form -->
-                    <form id="contactForm" action="/thanks/" name="Contact" method="POST" netlify data-netlify="true" data-netlify-honeypot="bot-field">
+                    <form id="contactForm" action="/thanks.html#contact" name="Contact" method="POST" netlify data-netlify="true" data-netlify-honeypot="bot-field">
 					<input type="hidden" name="form-name" value="Contact" />
                         <div class="form-group">
                             <input type="text" name="name" class="form-control-input" id="cname" required>
