adding projects section

--- a/index.html
+++ b/index.html
@@ -149,6 +149,58 @@
         </div> <!-- end of container -->
     </div> <!-- end of basic-1 -->
     <!-- end of about -->
+
+		<!-- Projects -->
+    <div class="basic-4 bg-gray">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-12">
+                    <h1>My Projects</h1>
+                    <br>
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+            <div class="row">
+                <div class="row">
+                    <!-- 1 Project Grid -->
+                    <div class="col-lg-4">
+                        <div class="text-container text-center">
+                            <div class="image-container">
+                                <a href="project.html">
+                                    <img class="img-fluid" src="Projects/mar/marseille.jpg" alt="alternative">
+                                </a>
+                            </div> <!-- end of image-container -->
+                            <p><strong>Olympique de Marseille - Artworks</strong></p>
+                        </div> <!-- end of text-container -->
+                    </div> <!-- end of col -->
+                    <!-- 2 Project Grid -->
+                    <div class="col-lg-4">
+                        <div class="text-container text-center">
+                            <div class="image-container">
+                                <a href="project.html">
+                                    <img class="img-fluid" src="Projects/soc/socialmedia.jpg" alt="alternative">
+                                </a>
+                            </div> <!-- end of image-container -->
+                            <p><strong>Social Media - Collection</strong></p>
+                        </div> <!-- end of text-container -->
+                    </div> <!-- end of col -->
+                    <!-- 3 Project Grid -->
+                    <div class="col-lg-4">
+                        <div class="text-container text-center">
+                            <div class="image-container">
+                                <a href="project.html">
+                                    <img class="img-fluid" src="Projects/wes/westhame.jpg" alt="alternative">
+                                </a>
+                            </div> <!-- end of image-container -->
+                            <p><strong>West Ham United - Artworks</strong></p>
+                        </div> <!-- end of text-container -->
+                    </div> <!-- end of col -->
+                </div> <!-- end of row -->
+                <!-- Buttom of More -->
+                <a class="btn-solid-lg page-scroll mx-auto" href="projects.html">More</a>
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of basic-4 -->
+    <!-- end of Projects -->
 	
     <!-- Services -->
     <div id="services" class="basic-2">
