add meta tags for SMP

--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
 	<!-- SEO Meta Tags -->
-    <meta name="description" content="Your description">
-    <meta name="author" content="Your name">
+	<meta name="description" content="Your description">
+	<meta name="author" content="Your name">
+	
+	<!-- Webpage Title -->
+	<title>Soufyane Mokrim</title>
 
-    <!-- Webpage Title -->
-    <title>Soufyane Mokrim</title>
+	<!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
+	<meta property="og:site_name" content="Soufyane Mokrim" /> <!-- website name -->
+	<meta property="og:site" content="www.soufyanemokrim.com" /> <!-- website link -->
+	<meta property="og:title" content="Soufyane Mokrim Portfolio"/> <!-- title shown in the actual shared post -->
+	<meta property="og:description" content="Soufyane Morkrim (Portfolio), Moroccan graphic designer passionate about turning concepts into captivating visuals." /> <!-- description shown in the actual shared post -->
+	<meta property="og:image" content="https://soufyanemokrim.com/images/header-background.jpg" /> <!-- image link, make sure it's jpg -->
+	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
+	<meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
-    <!-- Styles -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Poppins:wght@600&display=swap" rel="stylesheet">
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/fontawesome-all.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+	<!-- Styles -->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Poppins:wght@600&display=swap" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/fontawesome-all.css" rel="stylesheet">
+	<link href="css/styles.css" rel="stylesheet">
 
-<!-- Favicon  -->
-    <link rel="icon" href="images/favicon.png">
+	<!-- Favicon  -->
+	<link rel="icon" href="images/favicon.png">
 
 </head>
 <body style="background-color: black;">
