Update projects section
update project url

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </div> <!-- end of basic-1 -->
     <!-- end of about -->
 
-		<!-- Projects -->
+	<!-- Projects -->
     <div class="basic-4 bg-gray">
         <div class="container">
             <div class="row text-center">
@@ -174,8 +174,8 @@
                     <div class="col-lg-4">
                         <div class="text-container text-center">
                             <div class="image-container">
-                                <a href="project.html">
-                                    <img class="img-fluid" src="Projects/mar/marseille.jpg" alt="alternative">
+                                <a href="projects/mar/gallery.html">
+                                    <img class="img-fluid" src="projects/mar/marseille.jpg" alt="alternative">
                                 </a>
                             </div> <!-- end of image-container -->
                             <p><strong>Olympique de Marseille - Artworks</strong></p>
@@ -185,8 +185,8 @@
                     <div class="col-lg-4">
                         <div class="text-container text-center">
                             <div class="image-container">
-                                <a href="project.html">
-                                    <img class="img-fluid" src="Projects/soc/socialmedia.jpg" alt="alternative">
+                                <a href="soc.html">
+                                    <img class="img-fluid" src="projects/soc/socialmedia.jpg" alt="alternative">
                                 </a>
                             </div> <!-- end of image-container -->
                             <p><strong>Social Media - Collection</strong></p>
@@ -196,8 +196,8 @@
                     <div class="col-lg-4">
                         <div class="text-container text-center">
                             <div class="image-container">
-                                <a href="project.html">
-                                    <img class="img-fluid" src="Projects/wes/westhame.jpg" alt="alternative">
+                                <a href="wes.html">
+                                    <img class="img-fluid" src="projects/wes/westhame.jpg" alt="alternative">
                                 </a>
                             </div> <!-- end of image-container -->
                             <p><strong>West Ham United - Artworks</strong></p>
