update link for projects section

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <div class="col-lg-4">
                         <div class="text-container text-center">
                             <div class="image-container">
-                                <a href="soc.html">
+                                <a href="projects/soc/gallery.html.html">
                                     <img class="img-fluid" src="projects/soc/socialmedia.jpg" alt="alternative">
                                 </a>
                             </div> <!-- end of image-container -->
@@ -196,7 +196,7 @@
                     <div class="col-lg-4">
                         <div class="text-container text-center">
                             <div class="image-container">
-                                <a href="wes.html">
+                                <a href="projects/wes/gallery.html.html">
                                     <img class="img-fluid" src="projects/wes/westhame.jpg" alt="alternative">
                                 </a>
                             </div> <!-- end of image-container -->
