--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
                         <a class="nav-link page-scroll" href="#services">Services</a>
                     </li>
 					
-					<!-- dropdown -if i need it--->
+					<!-- dropdown -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Additional informations</a>
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Work with me</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item page-scroll" href="project.html">Project Details</a>
+                            <div class="dropdown-divider"></div>
+							<a class="dropdown-item page-scroll" href="project.html">My Projects</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item page-scroll" href="terms.html">Terms & Conditions</a>
                             <div class="dropdown-divider"></div>
