--- a/thanks.html
+++ b/thanks.html
@@ -53,7 +53,7 @@
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item page-scroll" href="project.html">Project Details</a>
                             <div class="dropdown-divider"></div>
-							<a class="dropdown-item page-scroll" href="project.html">My Projects</a>
+							<a class="dropdown-item page-scroll" href="projects.html">My Projects</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item page-scroll" href="terms.html">Terms & Conditions</a>
                             <div class="dropdown-divider"></div>
