edit the back home btn

--- a/thanks.html
+++ b/thanks.html
@@ -110,7 +110,7 @@
     </header> <!-- end of ex-header -->
     <!-- end of header -->
 	
-	<!-- Contact -->
+	<!-- thanks -->
     <div id="contact" class="form-1 bg-gray">
         <div class="container">
                 <div class="vh-100 d-flex justify-content-center align-items-center">
@@ -125,13 +125,13 @@
                         <div class="text-center">
                             <h1>Thank You !</h1>
                             <p>Your message has been received and will be promptly addressed by our dedicated team.</p>
-                            <button class="btn-primary btn-outline-lg">Back Home</button>
+                            <a class="btn-solid-reg mb-5" href="index.html">Back Home</a>
                         </div>
                     </div>
                 </div> <!-- end of col -->
         </div> <!-- end of container -->
     </div> <!-- end of form-1 -->  
-    <!-- end of contact -->
+    <!-- end of thanks -->
 	
 	    <!-- Footer -->
     <div class="footer bg-gray">
