Update mail to info@soufyanemokrim.com

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>Contact details</h2>
-                    <p class="p-heading">For any type of online project please don't hesitate to get in touch with me. The fastest way is to send me your message using the following email <a class="blue no-line" href="mailto:contact@soufyanemokrim.com">contact@soufyanemokrim.com</a></p>
+                    <p class="p-heading">For any type of online project please don't hesitate to get in touch with me. The fastest way is to send me your message using the following email <a class="blue no-line" href="mailto:info@soufyanemokrim.com">info@soufyanemokrim.com</a></p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
