--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
 	<!-- SEO Meta Tags -->
-	<meta name="description" content="Welcome to the creative world of Soufyane Mokrim, a 19-year-old Moroccan graphic designer whose passion lies in transforming ideas into visually stunning realities. Specializing in clean, minimalist designs using Adobe Creative Suite, I craft captivating visuals that prioritize user-centricity and purpose. As Co-Founder & CEO/CDO of QIR Agency, I shape brand identities and deliver top-notch creative work. With a track record of designing compelling social media content, commercial logos, and gaining valuable experience at SG2i Consulting, my goal is to merge design trends with my unique creative flair. Join me on my journey as I pursue Graphic Design studies at CMC NADOR, City of Professions and Competences.">
+	<meta name="description" content="Welcome to the creative world of Soufyane Mokrim, a 19-year-old Moroccan graphic designer whose passion lies in transforming ideas into visually stunning realities. Specializing in clean, minimalist designs using Adobe Creative Suite, I craft captivating visuals that prioritize user-centricity and purpose. As a CDO of QIR Agency, I shape brand identities and deliver top-notch creative work. With a track record of designing compelling social media content, commercial logos, and gaining valuable experience at SG2i Consulting, my goal is to merge design trends with my unique creative flair. Join me on my journey as I pursue Graphic Design studies at CMC NADOR, City of Professions and Competences.">
 	<meta name="author" content="Soufyane Mokrim">
 	
 	<!-- Webpage Title -->
@@ -137,7 +137,7 @@
                 <div class="col-lg-4">
                     <div class="text-container second">
                         <div class="time">2024 - PRESENT</div>
-                        <h6>QIR Agency - Co-Fonder & CEO & CDO</h6>
+                        <h6>QIR Agency - Co-Fonder</h6>
                         <p>My role involves shaping our brand's identity and telling our story in engaging ways, and making sure our creative work is top-notch.</p>
                         <div class="time">2023 - PRESENT</div>
                         <h6>Freelance- Graphic Designer</h6>
