adding morocco project

--- a/projects.html
+++ b/projects.html
@@ -179,12 +179,12 @@
 									<!-- the blocks -->
 									<div class="text-container">
 										<div class="image-container">
-											<a href="project.html">
-												<img class="img-fluid" src="https://www.shutterstock.com/image-vector/not-available-grunge-rubber-stamp-260nw-549465931.jpg" alt="alternative">
+											<a href="projects/dir/gallery.html">
+												<img class="img-fluid" src="projects/dir/morocco.png" alt="alternative">
 											</a>
 										</div> 
 										<!-- end of image-container -->
-										<p><strong>Comming soon</strong></p>
+										<p><strong>Africa Cup of Nations - Morocco</strong></p>
 									</div>
 									<!-- end of text-container -->
 									
