fix extension error

--- a/projects/dir/gallery.html
+++ b/projects/dir/gallery.html
@@ -51,7 +51,7 @@
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
 					<a class="gallery__item fresco" href="gallery/2.png" data-fresco-group="gallery">
-						<img src="gallery/2.png" alt="">
+						<img src="gallery/2.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
