fix the extension

--- a/projects.html
+++ b/projects.html
@@ -121,7 +121,7 @@
 	
 
 
-    <!-- Basic -->
+    <!-- My Projects -->
     <div class="ex-basic-1 pt-3 pb-5">
         <div class="container">
             <div class="row">
