--- a/projects/dir/gallery.html
+++ b/projects/dir/gallery.html
@@ -42,51 +42,51 @@
 					<p class="fs-1 text-center text-uppercase">identity</p>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/1.png" data-fresco-group="gallery">
-						<img src="gallery/1.png" alt="">
+					<a class="gallery__item fresco" href="gallery/1.jpg" data-fresco-group="gallery">
+						<img src="gallery/1.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
 					<p class="fs-1 text-center text-uppercase">ARTWORKS</p>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/2.png" data-fresco-group="gallery">
+					<a class="gallery__item fresco" href="gallery/2.jpg" data-fresco-group="gallery">
 						<img src="gallery/2.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/3.png" data-fresco-group="gallery">
-						<img src="gallery/3.png" alt="">
+					<a class="gallery__item fresco" href="gallery/3.jpg" data-fresco-group="gallery">
+						<img src="gallery/3.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/4.png" data-fresco-group="gallery">
-						<img src="gallery/4.png" alt="">
+					<a class="gallery__item fresco" href="gallery/4.jpg" data-fresco-group="gallery">
+						<img src="gallery/4.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/5.png" data-fresco-group="gallery">
-						<img src="gallery/5.png" alt="">
+					<a class="gallery__item fresco" href="gallery/5.jpg" data-fresco-group="gallery">
+						<img src="gallery/5.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/6.png" data-fresco-group="gallery">
-						<img src="gallery/6.png" alt="">
+					<a class="gallery__item fresco" href="gallery/6.jpg" data-fresco-group="gallery">
+						<img src="gallery/6.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/7.png" data-fresco-group="gallery">
-						<img src="gallery/7.png" alt="">
+					<a class="gallery__item fresco" href="gallery/7.jpg" data-fresco-group="gallery">
+						<img src="gallery/7.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/8.png" data-fresco-group="gallery">
-						<img src="gallery/8.png" alt="">
+					<a class="gallery__item fresco" href="gallery/8.jpg" data-fresco-group="gallery">
+						<img src="gallery/8.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/9.png" data-fresco-group="gallery">
-						<img src="gallery/9.png" alt="">
+					<a class="gallery__item fresco" href="gallery/9.jpg" data-fresco-group="gallery">
+						<img src="gallery/9.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
