--- a/projects/dir/gallery.html
+++ b/projects/dir/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Olympique de Marseille | Artworks</title>
+	<title>Africa Cup of Nations - Morocco</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Welcome to the creative world of Soufyane Mokrim, a passionate 19-year-old Moroccan graphic designer dedicated to transforming ideas into visually captivating masterpieces. Specializing in clean, minimalist designs using Adobe Creative Suite, I craft purposeful visuals that resonate. As Co-Founder & CEO/CDO of QIR Agency, my focus is on crafting engaging brand narratives. With a freelance background in designing striking social media content and commercial logos, I blend current design trends with my unique creative flair. Currently pursuing Graphic Design studies at CMC NADOR, my journey includes valuable experience from roles like Graphic Designer at SG2i Consulting, Casablanca. Explore my portfolio and witness the power of compelling design">
 	<meta name="keywords" content="Graphic Design, Minimalist Design, Adobe Creative Suite, Brand Identity, Visual Communication, Social Media Content, Logo Design, User-Centric Design, Creative Trends, Brand Storytelling, QIR Agency, Freelance Graphic Designer, Moroccan Graphic Designer, CMC NADOR, Creative Portfolio, Design Trends, Engaging Visuals, Purposeful Design, Digital Creativity, Graphic Design Studies">
