--- a/projects/mzt/gallery.html
+++ b/projects/mzt/gallery.html
@@ -29,7 +29,7 @@
 		<div class="gallery__warp">
 			<div class="row">
 				<div class="col-lg-12">
-					<a href="gallery/header.png">
+					<a class="gallery__item fresco" data-fresco-group="gallery" href="gallery/header.png">
 						<img src="gallery/header.png" alt="">
 					</a>
 				</div>
