updating fresco to all

--- a/projects/mzt/gallery.html
+++ b/projects/mzt/gallery.html
@@ -29,42 +29,42 @@
 		<div class="gallery__warp">
 			<div class="row">
 				<div class="col-lg-12">
-					<a class="gallery__item fresco" data-fresco-group="gallery" href="gallery/header.png">
+					<a href="gallery/header.png">
 						<img src="gallery/header.png" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<a href="gallery/1.png">
+					<a class="gallery__item fresco" data-fresco-group="gallery" href="gallery/1.png">
 						<img src="gallery/1.png" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<a href="gallery/2.png">
+					<a class="gallery__item fresco" data-fresco-group="gallery" href="gallery/2.png">
 						<img src="gallery/2.png" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<a href="gallery/1.png">
+					<a class="gallery__item fresco" data-fresco-group="gallery" href="gallery/1.png">
 						<img src="gallery/text.png" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<a href="gallery/4.png">
+					<a class="gallery__item fresco" data-fresco-group="gallery" href="gallery/4.png">
 						<img src="gallery/4.png" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<a href="gallery/3.png">
+					<a class="gallery__item fresco" data-fresco-group="gallery" href="gallery/3.png">
 						<img src="gallery/3.png" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<a href="gallery/6.png">
+					<a class="gallery__item fresco" data-fresco-group="gallery" href="gallery/6.png">
 						<img src="gallery/6.png" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<a href="gallery/5.png">
+					<a class="gallery__item fresco" data-fresco-group="gallery" href="gallery/5.png">
 						<img src="gallery/5.png" alt="">
 					</a>
 				</div>
