adding wac project to the projects section

--- a/projects.html
+++ b/projects.html
@@ -185,6 +185,17 @@
 									</div>
 								</div>
 
+                                <div class="col">
+									<div class="text-container">
+										<div class="image-container">
+											<a href="projects/mac/gallery.html">
+												<img class="img-fluid" src="projects/mac/widad.jpg" alt="alternative">
+											</a>
+										</div>
+										<p><strong>African Ligue 2023 - Wydad AC</strong></p>
+									</div>
+								</div>
+
 							</div>
 						</div>
 						<!-- end of works -->
