adding good resolution for the imgae in the widad project

--- a/projects/mac/gallery.html
+++ b/projects/mac/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Olympique de Marseille | Artworks</title>
+	<title>African Ligue 2023 - Wydad AC</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Welcome to the creative world of Soufyane Mokrim, a passionate 19-year-old Moroccan graphic designer dedicated to transforming ideas into visually captivating masterpieces. Specializing in clean, minimalist designs using Adobe Creative Suite, I craft purposeful visuals that resonate. As Co-Founder & CEO/CDO of QIR Agency, my focus is on crafting engaging brand narratives. With a freelance background in designing striking social media content and commercial logos, I blend current design trends with my unique creative flair. Currently pursuing Graphic Design studies at CMC NADOR, my journey includes valuable experience from roles like Graphic Designer at SG2i Consulting, Casablanca. Explore my portfolio and witness the power of compelling design">
 	<meta name="keywords" content="Graphic Design, Minimalist Design, Adobe Creative Suite, Brand Identity, Visual Communication, Social Media Content, Logo Design, User-Centric Design, Creative Trends, Brand Storytelling, QIR Agency, Freelance Graphic Designer, Moroccan Graphic Designer, CMC NADOR, Creative Portfolio, Design Trends, Engaging Visuals, Purposeful Design, Digital Creativity, Graphic Design Studies">
@@ -29,41 +29,54 @@
 		<div class="gallery__warp">
 			<div class="row">
 				<div class="col-lg-12">
-					<a href="gallery/header.png">
-						<img src="gallery/header.png" alt="">
+					<a class="gallery__item fresco" data-fresco-group="gallery" href="gallery/header.jpg">
+						<img src="gallery/header.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<a href="gallery/text.png">
-						<img src="gallery/text.png" alt="">
+					<a class="gallery__item fresco" data-fresco-group="gallery" href="gallery/secondh.jpg">
+						<img src="gallery/secondh.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<p class="fs-1 text-center text-uppercase">identity</p>
+					<p class="fs-1 text-center text-uppercase">Hello, I'm Soufyane MOKRIM , a graphic designer and a passionate football enthusiast. It's a pleasure to be here today to present my project to the Wydad Casablanca team, one of the premier clubs in the sporting world and the heart of my city, Casablanca. This project represents my efforts and passion in designing a brand that draws from our cultural roots while looking towards the future. In this presentation, I'll share my vision for evolving your great team's identity, focusing on elements that embody your unique identity and inspire your devoted fans.</p>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/8.png" data-fresco-group="gallery">
-						<img src="gallery/8.png" alt="">
+					<a class="gallery__item fresco" href="gallery/thirdh.jpg" data-fresco-group="gallery">
+						<img src="gallery/thirdh.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/5.png" data-fresco-group="gallery">
+					<a class="gallery__item fresco" href="gallery/forthh.jpg" data-fresco-group="gallery">
+						<img src="gallery/forthh.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-12">
+					<p class="fs-1 text-center text-uppercase">Artworks/p>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="gallery/1.png" data-fresco-group="gallery">
+						<img src="gallery/1.png" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="gallery/2.jpg" data-fresco-group="gallery">
+						<img src="gallery/2.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="gallery/3.png" data-fresco-group="gallery">
+						<img src="gallery/3.png" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="gallery/4.jpg" data-fresco-group="gallery">
+						<img src="gallery/4.jpg" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="gallery/5.jpg" data-fresco-group="gallery">
 						<img src="gallery/5.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/2.png" data-fresco-group="gallery">
-						<img src="gallery/2.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/9.png" data-fresco-group="gallery">
-						<img src="gallery/9.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/7.png" data-fresco-group="gallery">
-						<img src="gallery/7.png" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
@@ -72,100 +85,34 @@
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/4.png" data-fresco-group="gallery">
-						<img src="gallery/4.png" alt="">
+					<a class="gallery__item fresco" href="gallery/7.png" data-fresco-group="gallery">
+						<img src="gallery/7.png" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/3.png" data-fresco-group="gallery">
-						<img src="gallery/3.png" alt="">
+					<a class="gallery__item fresco" href="gallery/8.png" data-fresco-group="gallery">
+						<img src="gallery/8.png" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="gallery/9.png" data-fresco-group="gallery">
+						<img src="gallery/9.png" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="gallery/10.png" data-fresco-group="gallery">
+						<img src="gallery/10.png" alt="">
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco" href="gallery/11.jpeg" data-fresco-group="gallery">
+						<img src="gallery/11.jpeg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<p class="fs-1 text-center text-uppercase">various graphics</p>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/14.png" data-fresco-group="gallery">
-						<img src="gallery/14.png" alt="">
+					<a class="gallery__item fresco" href="gallery/end.jpg" data-fresco-group="gallery">
+						<img src="gallery/end.jpg" alt="">
 					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/16.png" data-fresco-group="gallery">
-						<img src="gallery/16.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/25.png" data-fresco-group="gallery">
-						<img src="gallery/25.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/21.png" data-fresco-group="gallery">
-						<img src="gallery/21.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/12.png" data-fresco-group="gallery">
-						<img src="gallery/12.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/20.png" data-fresco-group="gallery">
-						<img src="gallery/20.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/19.png" data-fresco-group="gallery">
-						<img src="gallery/19.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/23.png" data-fresco-group="gallery">
-						<img src="gallery/23.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/17.png" data-fresco-group="gallery">
-						<img src="gallery/17.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/24.png" data-fresco-group="gallery">
-						<img src="gallery/24.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/22.png" data-fresco-group="gallery">
-						<img src="gallery/22.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/15.png" data-fresco-group="gallery">
-						<img src="gallery/15.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/13.png" data-fresco-group="gallery">
-						<img src="gallery/13.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/11.png" data-fresco-group="gallery">
-						<img src="gallery/11.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/18.png" data-fresco-group="gallery">
-						<img src="gallery/18.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/1.png" data-fresco-group="gallery">
-						<img src="gallery/1.png" alt="">
-					</a>
-				</div>
-				<div class="col-lg-12">
-					<p class="fs-1 text-center text-uppercase">thanks for watching</p>
 				</div>
 			</div>
 		</div>
