change the name of mac into wac

--- a/projects/wac/gallery.html
+++ b/projects/wac/gallery.html
@@ -55,8 +55,8 @@
 					<p class="fs-1 text-center text-uppercase">Artworks/p>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/1.png" data-fresco-group="gallery">
-						<img src="gallery/1.png" alt="">
+					<a class="gallery__item fresco" href="gallery/1.jpg" data-fresco-group="gallery">
+						<img src="gallery/1.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
@@ -65,8 +65,8 @@
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/3.png" data-fresco-group="gallery">
-						<img src="gallery/3.png" alt="">
+					<a class="gallery__item fresco" href="gallery/3.jpg" data-fresco-group="gallery">
+						<img src="gallery/3.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
@@ -76,37 +76,37 @@
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
 					<a class="gallery__item fresco" href="gallery/5.jpg" data-fresco-group="gallery">
-						<img src="gallery/5.png" alt="">
+						<img src="gallery/5.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/6.png" data-fresco-group="gallery">
-						<img src="gallery/6.png" alt="">
+					<a class="gallery__item fresco" href="gallery/6.jpg" data-fresco-group="gallery">
+						<img src="gallery/6.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/7.png" data-fresco-group="gallery">
-						<img src="gallery/7.png" alt="">
+					<a class="gallery__item fresco" href="gallery/7.jpg" data-fresco-group="gallery">
+						<img src="gallery/7.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/8.png" data-fresco-group="gallery">
-						<img src="gallery/8.png" alt="">
+					<a class="gallery__item fresco" href="gallery/8.jpg" data-fresco-group="gallery">
+						<img src="gallery/8.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/9.png" data-fresco-group="gallery">
-						<img src="gallery/9.png" alt="">
+					<a class="gallery__item fresco" href="gallery/9.jpg" data-fresco-group="gallery">
+						<img src="gallery/9.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/10.png" data-fresco-group="gallery">
-						<img src="gallery/10.png" alt="">
+					<a class="gallery__item fresco" href="gallery/10.jpg" data-fresco-group="gallery">
+						<img src="gallery/10.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco" href="gallery/11.jpeg" data-fresco-group="gallery">
-						<img src="gallery/11.jpeg" alt="">
+					<a class="gallery__item fresco" href="gallery/11.jpg" data-fresco-group="gallery">
+						<img src="gallery/11.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-lg-12">
