fix code error in gallery.html/wac

--- a/projects/wac/gallery.html
+++ b/projects/wac/gallery.html
@@ -52,7 +52,7 @@
 					</a>
 				</div>
 				<div class="col-lg-12">
-					<p class="fs-1 text-center text-uppercase">Artworks/p>
+					<p class="fs-1 text-center text-uppercase">Artworks</p>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
 					<a class="gallery__item fresco" href="gallery/1.jpg" data-fresco-group="gallery">
