i thing that i add the wac to projects

--- a/projects.html
+++ b/projects.html
@@ -188,8 +188,8 @@
                                 <div class="col">
 									<div class="text-container">
 										<div class="image-container">
-											<a href="projects/mac/gallery.html">
-												<img class="img-fluid" src="projects/mac/widad.jpg" alt="alternative">
+											<a href="projects/wac/gallery.html">
+												<img class="img-fluid" src="projects/wac/widade.png" alt="alternative">
 											</a>
 										</div>
 										<p><strong>African Ligue 2023 - Wydad AC</strong></p>
